# fakechemstore

./: cache.py  dbinterface.py  main.py  pyproject.toml
accountdb/: .replit  Customer.py  cookies.txt  dbinterface.py  pyproject.toml  test.sh
accountdb/static/: periodic-table.json  prices.json
fakechemstore/: index.html  login.html  privacy-policy.html
fakechemstore/.config/configstore/: update-notifier-npm.json
fakechemstore/css/: login.css  shopping-cart.css  style.css
fakechemstore/js/shop/: shoppingCart.js  shoppingCartManager.js
fakechemstore/js/user/: login.js
static/: cookies.html  order.json  shopping-cart.html  signup.html
static/css/: desktop.css  media.css  nav.css  overlay.css  tv.css
static/js/: InfoData.js  InvalidArgumentException.js  cssTransitionUtils.js  data.js
static/js/shop/: shopUI.js
static/js/user/: logout.js  signup.js
